[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chardet>=5.2.0",
    "ipaddress>=1.0.23",
    "matplotlib>=3.10.1",
    "netmiko>=4.5.0",
    "networkx>=3.4.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "paramiko>=3.5.1",
    "tabulate>=0.9.0",
]
